terraform/modules/network/main.tf
data "aws_availability_zones" "available" {}

resource "aws_vpc" "this" {
  cidr_block           = var.cidr
  enable_dns_hostnames = true 
  enable_dns_support   = true

  tags = {
    Name = "idp-vpc"
  }
}

resource "aws_subnet" "public" {
  count                   = 2
  vpc_id                  = aws_vpc.this.id
  cidr_block              = var.public_subnets[count.index]
  availability_zone       = data.aws_availability_zones.available.names[count.index]
  map_public_ip_on_launch = true

  
  tags = {
    Name                               = "idp-public-subnet-${count.index}"
    "kubernetes.io/role/elb"           = "1"
    "kubernetes.io/cluster/idp-cluster" = "shared" # Replace idp-cluster with your planned EKS cluster name
  }
}

resource "aws_subnet" "private" {
  count             = 2
  vpc_id            = aws_vpc.this.id
  cidr_block        = var.private_subnets[count.index]
  availability_zone = data.aws_availability_zones.available.names[count.index]

  # Tag tells EKS where it's safe to spin up private internal microservice load balancers
  tags = {
    Name                               = "idp-private-subnet-${count.index}"
    "kubernetes.io/role/internal-elb"  = "1"
    "kubernetes.io/cluster/idp-cluster" = "shared"
  }
}

resource "aws_internet_gateway" "this" {
  vpc_id = aws_vpc.this.id
}

resource "aws_route_table" "public" {
  vpc_id = aws_vpc.this.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.this.id
  }

  tags = {
    Name = "public-rt"
  }
}

resource "aws_route_table_association" "public" {
  count          = 2
  subnet_id      = aws_subnet.public[count.index].id
  route_table_id = aws_route_table.public.id
}

resource "aws_eip" "nat" {
  domain = "vpc"
}

resource "aws_nat_gateway" "this" {
  allocation_id = aws_eip.nat.id
  subnet_id     = aws_subnet.public[0].id 
  }

resource "aws_route_table" "private" {
  vpc_id = aws_vpc.this.id

  tags = {
    Name = "private-rt"
  }
}

resource "aws_route_table_association" "private" {
  count          = 2
  subnet_id      = aws_subnet.private[count.index].id
  route_table_id = aws_route_table.private.id
}

# Clean, safe mapping for outbound traffic from your private EKS nodes
resource "aws_route" "private_nat" {
  route_table_id         = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id         = aws_nat_gateway.this.id
}


public_subnet_tags = {
    "kubernetes.io/cluster/dev-eks" = "shared"
    "kubernetes.io/role/elb"        = "1"
  }

  private_subnet_tags = {
    "kubernetes.io/cluster/dev-eks"   = "shared"
    "kubernetes.io/role/internal-elb" = "1"
  }

  tags = {
    Environment = "dev"
  }
}
